force-app/main/default/objects/Case/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRICE_ADJUSTMENT</fullName>
                <label>Price Adjustment</label>
            </value>
            <value>
                <fullName>BANK_TRANSFER</fullName>
                <label>Bank Transfer</label>
            </value>
            <value>
                <fullName>STOCK_ON_HOLD</fullName>
                <label>Stock On Hold</label>
            </value>
            <value>
                <fullName>CLIENTELING_EXCEPTION</fullName>
                <label>Clienteling Exception</label>
            </value>
            <value>
                <fullName>FREE_SHIPPING</fullName>
                <label>Free Shipping</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>