force-app/main/default/objects/Case/fields/Assigned_To_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please assign the case to the correct member - Advisor or Manager.
If not, the case is automatically assigned to the escalation team</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>