force-app/main/default/objects/Case/fields/Assigned_To_Formula_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Formula_Escalation__c</fullName>
    <description>Return true if the Current User is the User Assigned to the Escalated Request</description>
    <formula>Assigned_To_Escalation__r.Id  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Formula</label>
    <type>Checkbox</type>
</CustomField>