force-app/main/default/objects/Case/fields/Back_Office_assignee__c.field-meta.xml
<CustomField>
    <fullName>Back_Office_assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Back Office</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.IsTechnicalUser__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>User.Is_Identity_User__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Back_Office_assignees</relationshipName>
    <type>Lookup</type>
</CustomField>