force-app/main/default/objects/Case/fields/Birthday_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Birthday notification:14 days, 7 days and D day</inlineHelpText>
    <label>Birthday Reminder</label>
    <type>Checkbox</type>
</CustomField>