force-app/main/default/objects/Case/fields/CA_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CA Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>