force-app/main/default/objects/Case/fields/CA_store__c.field-meta.xml
<CustomField>
    <fullName>CA_store__c</fullName>
    <description>Default Store of CA selected for MyCR</description>
    <formula>TEXT(CA_Name__r.DefaultStore__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA store</label>
    <type>Text</type>
</CustomField>