force-app/main/default/objects/Case/fields/Case_Origin_IMG__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_IMG__c</fullName>
    <formula>IMAGE ( 

CASE ( Origin , 
&quot;Email&quot;, &quot;/resource/iconics/images/channel/GreyEmail.PNG&quot;, 
&quot;Phone&quot;, &quot;/resource/iconics/images/channel/Phoneicon.PNG&quot;, 
&quot;Web&quot;, &quot;/resource/iconics/images/channel/webicon.PNG&quot;, 
&quot;chatbot&quot;, &quot;/resource/iconics/images/channel/bot.jpg&quot;,
&quot;Messaging&quot;, &quot;/resource/iconics/images/channel/messaging.jpg&quot;,
&quot;Chat&quot;, &quot;/resource/iconics/images/channel/chat.jpg&quot;, 
&quot;Social&quot;, &quot;/resource/iconics/images/channel/chat.jpg&quot;, 
&quot;Facebook&quot;, &quot;/resource/iconics/images/channel/facebook.PNG&quot;, 
&quot;Twitter&quot;, &quot;/resource/iconics/images/channel/twitter.PNG&quot;, 
&quot;Instagram&quot;, &quot;/resource/iconics/images/channel/instagram.PNG&quot;, 
&quot;Foursquare&quot;,&quot;/resource/iconics/images/channel/foursquare.PNG&quot;, 
&quot;Google Plus&quot;,&quot;/resource/iconics/images/channel/googleplus.PNG&quot;, 
&quot;Linkedin&quot;,&quot;/resource/iconics/images/channel/linkedin.PNG&quot;, 
&quot;Pinterest&quot;,&quot;/resource/iconics/images/channel/pinterest.PNG&quot;, 
&quot;Snapchat&quot;,&quot;/resource/iconics/images/channel/snapchat.PNG&quot;, 
&quot;Vimeo&quot;,&quot;/resource/iconics/images/channel/vimeo.PNG&quot;, 
&quot;Whatsapp&quot;,&quot;/resource/iconics/images/whatsapp.PNG&quot;, 
&quot;Youtube&quot;,&quot;/resource/iconics/images/channel/youtube.PNG&quot;, 
&quot;/resource/iconics/images/channel/case.PNG&quot;), &quot;Case Origin&quot;, 30, 30)</formula>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>