force-app/main/default/objects/Case/fields/Claim_Opening_date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Opening_date__c</fullName>
    <label>Claim Opening date</label>
    <type>Date</type>
</CustomField>