force-app/main/default/objects/Case/fields/Client_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Client_Segmentation__c</fullName>
    <formula>Account.Segmentation_To_Display__c</formula>
    <label>Segmentation</label>
    <type>Text</type>
</CustomField>