force-app/main/default/objects/Case/fields/ClosedByIS__c.field-meta.xml
<CustomField>
    <fullName>ClosedByIS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Mass cleaning by IS</description>
    <label>ClosedByIS</label>
    <type>Checkbox</type>
</CustomField>