force-app/main/default/objects/Case/fields/Collection__c.field-meta.xml
<CustomField>
    <fullName>Collection__c</fullName>
    <description>Field used for POD record types</description>
    <label>Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Precoll SS</fullName>
            </value>
            <value>
                <fullName>Spring Summer</fullName>
            </value>
            <value>
                <fullName>Prefall FW</fullName>
            </value>
            <value>
                <fullName>Precoll FW</fullName>
            </value>
            <value>
                <fullName>Fall Winter</fullName>
            </value>
            <value>
                <fullName>Capsule Collection</fullName>
            </value>
            <value>
                <fullName>Others (Christmas, Chinese New Year)</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>