force-app/main/default/objects/Case/fields/Coming_Action__c.field-meta.xml
<CustomField>
    <fullName>Coming_Action__c</fullName>
    <label>Coming Action</label>
    <type>Date</type>
</CustomField>