force-app/main/default/objects/Case/fields/Coming_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Coming_Appointment__c</fullName>
    <label>Coming Appointment</label>
    <type>Date</type>
</CustomField>