force-app/main/default/objects/Case/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Used for Product on Demand</description>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>