force-app/main/default/objects/Case/fields/Commercial_Gesture__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Gesture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Gesture</label>
    <type>Checkbox</type>
</CustomField>