force-app/main/default/objects/Case/fields/Contact_preference_from_client__c.field-meta.xml
<CustomField>
    <fullName>Contact_preference_from_client__c</fullName>
    <label>Contact preference from client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Sms</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>