force-app/main/default/objects/Case/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Used for Price of MyPR or Waiting list</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>ARS</fullName>
            </value>
            <value>
                <fullName>ATS</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>AWF</fullName>
            </value>
            <value>
                <fullName>AWG</fullName>
            </value>
            <value>
                <fullName>AZM</fullName>
            </value>
            <value>
                <fullName>BHD</fullName>
            </value>
            <value>
                <fullName>BRC</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
            </value>
            <value>
                <fullName>CDZ</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CLP</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>COP</fullName>
            </value>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>FJD</fullName>
            </value>
            <value>
                <fullName>FRF</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>GRD</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>IDR</fullName>
            </value>
            <value>
                <fullName>IEP</fullName>
            </value>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>IRR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>