force-app/main/default/objects/Case/fields/Current_Status_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Age__c</fullName>
    <description>&quot;Last OE Status Change Date&quot; should be updated each time the OE status changes.</description>
    <formula>NOW() -  TECHLastOEStatusChangeDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Days)</inlineHelpText>
    <label>Current Status Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>