force-app/main/default/objects/Case/fields/DefaultEmailFromAddressId__c.field-meta.xml
<CustomField>
    <fullName>DefaultEmailFromAddressId__c</fullName>
    <label>DefaultEmailFromAddressId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>