force-app/main/default/objects/Case/fields/DefaultEmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>DefaultEmailTemplateId__c</fullName>
    <label>DefaultEmailTemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>