force-app/main/default/objects/Case/fields/DeliveryType__c.field-meta.xml
<CustomField>
    <fullName>DeliveryType__c</fullName>
    <formula>CASE(TEXT(Order_Shipping__r.DeliveryType__c),
&apos;standard&apos;, &apos;Standard&apos;,
&apos;express&apos;, &apos;Express&apos;,
&apos;overnight&apos;, &apos;Overnight&apos;,
&apos;premium&apos;, &apos;Premium&apos;,
&apos;clickandcollect&apos;, &apos;Click &amp; Collect&apos;,
&apos;shipforpickup&apos;, &apos;Ship for Pickup&apos;,
&apos;&apos;)</formula>
    <label>Delivery Type</label>
    <type>Text</type>
</CustomField>