force-app/main/default/objects/Case/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <description>field used for MyPR</description>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>