force-app/main/default/objects/Case/fields/Desired_date_for_the_product__c.field-meta.xml
<CustomField>
    <fullName>Desired_date_for_the_product__c</fullName>
    <description>Used for MyPR</description>
    <label>Desired date for the product</label>
    <type>Date</type>
</CustomField>