force-app/main/default/objects/Case/fields/Escalation_Age__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Age__c</fullName>
    <formula>IF (
    ISPICKVAL(Escalation_Status__c, &quot;Closed&quot;),  
    Escalation_Closing_Date__c - Escalation_Opening_Date__c, 
    TODAY() - Escalation_Opening_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalation Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>