force-app/main/default/objects/Case/fields/Escalation_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Closing_Date__c</fullName>
    <label>Escalation Closing Date</label>
    <type>Date</type>
</CustomField>