force-app/main/default/objects/Case/fields/Escalation_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Opening_Date__c</fullName>
    <label>Escalation Opening Date</label>
    <type>Date</type>
</CustomField>