force-app/main/default/objects/Case/fields/Expected_delivery_date_to_client__c.field-meta.xml
<CustomField>
    <fullName>Expected_delivery_date_to_client__c</fullName>
    <label>Estimated date of delivery</label>
    <type>Date</type>
</CustomField>