force-app/main/default/objects/Case/fields/First_email_response__c.field-meta.xml
<CustomField>
    <fullName>First_email_response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Email Response</label>
    <type>Checkbox</type>
</CustomField>