force-app/main/default/objects/Case/fields/First_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>First_Follow_Up__c</fullName>
    <label>1st Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Email + WRD</fullName>
            </value>
            <value>
                <fullName>Messaging</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>