force-app/main/default/objects/Case/fields/First_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Follow_Up_Date__c</fullName>
    <label>1st Follow Up Date</label>
    <type>DateTime</type>
</CustomField>