force-app/main/default/objects/Case/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Important request you estimate as priority.
For MyCR, complaints are automatically pushed to Managers of the store.</inlineHelpText>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>