force-app/main/default/objects/Case/fields/Hot_Sku__c.field-meta.xml
<CustomField>
    <fullName>Hot_Sku__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Product in Demand record types</description>
    <label>Hot Sku</label>
    <type>Checkbox</type>
</CustomField>