force-app/main/default/objects/Case/fields/ICX_CasePickingUserId__c.field-meta.xml
<CustomField>
    <fullName>ICX_CasePickingUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICX Case Picking UserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ICX_CasePickingUser</relationshipName>
    <type>Lookup</type>
</CustomField>