force-app/main/default/objects/Case/fields/ICX_First_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ICX_First_Response_Date_Time__c</fullName>
    <description>Field use to log 1st outbound email date/time</description>
    <label>ICX-First Response Date Time</label>
    <type>DateTime</type>
</CustomField>