force-app/main/default/objects/Case/fields/ICX_GenesysConversationId__c.field-meta.xml
<CustomField>
    <fullName>ICX_GenesysConversationId__c</fullName>
    <externalId>true</externalId>
    <label>ICX Genesys Conversation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>