force-app/main/default/objects/Case/fields/ICX_GenesysParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ICX_GenesysParticipantId__c</fullName>
    <label>ICX Genesys Participant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>