force-app/main/default/objects/Case/fields/IgnoreDuplicateOE__c.field-meta.xml
<CustomField>
    <fullName>IgnoreDuplicateOE__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ignore verification of duplicate OE with same shipping number at OE creation.</inlineHelpText>
    <label>IgnoreDuplicateOE</label>
    <type>Checkbox</type>
</CustomField>