force-app/main/default/objects/Case/fields/In_Store_Action__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Action__c</fullName>
    <label>In Store Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Client contacted</fullName>
            </value>
            <value>
                <fullName>Client not available – message left</fullName>
            </value>
            <value>
                <fullName>Product lay away</fullName>
            </value>
            <value>
                <fullName>Sale confirmed</fullName>
            </value>
            <value>
                <fullName>No action</fullName>
            </value>
            <value>
                <fullName>Reassign to CSC</fullName>
            </value>
            <value>
                <fullName>Escalated to manager</fullName>
                <isActive>false</isActive>
                <label>Escalated to manager</label>
            </value>
            <value>
                <fullName>Item put aside</fullName>
                <isActive>false</isActive>
                <label>Item put aside</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>