force-app/main/default/objects/Case/fields/In_Store_Status__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Status__c</fullName>
    <description>Status for follow up in store</description>
    <label>In Store Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>