force-app/main/default/objects/Case/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <formula>NOW()- LastModifiedDate &gt; 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>