force-app/main/default/objects/Case/fields/Invoicing_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Date__c</fullName>
    <description>field used for MyPR</description>
    <label>Invoicing Date</label>
    <type>Date</type>
</CustomField>