force-app/main/default/objects/Case/fields/Is_Request_to_Store__c.field-meta.xml
<CustomField>
    <fullName>Is_Request_to_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Request to Store</label>
    <type>Checkbox</type>
</CustomField>