force-app/main/default/objects/Case/fields/isOEAssignedToStore__c.field-meta.xml
<CustomField>
    <fullName>isOEAssignedToStore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record Type Operation Exception  with store field not empty end status__c = Store new</description>
    <label>isOEAssignedToStore</label>
    <type>Checkbox</type>
</CustomField>