force-app/main/default/objects/Case/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <description>Field used for Exception Manager</description>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return Exception</fullName>
            </value>
            <value>
                <fullName>Preparation Issue</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Stock Issue</fullName>
            </value>
            <value>
                <fullName>One Retail</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Tech Error</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Online Repairs</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Bounce Back</fullName>
            </value>
            <value>
                <fullName>MYPERSO ISSUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>